fixed alignment for use of nice scrollbar

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -1,7 +1,10 @@
+html {
+  overflow: auto;
+}
+
 img {
   max-width: 100%;
   animation: transitionPlay 1.1s;
-
 }
 
 .center {
@@ -164,7 +167,19 @@ a.footer-link:focus {
   fill: #E4405F
 }
 
+.nanobar {
+  left: 0;
+}
+
 body {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  padding: 5px;
+  overflow-y: scroll;
+  overflow-x: hidden;
   transition: all 0.3s ease-in-out;
 }
 
